--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,14 +11,14 @@
         <form action="" method="post">
             <h3>Iniciar Sesión</h3>
             <img src= "assets/descarga.png" alt="Login">
-            <input type="text" name="usuario" placeholder="Usuario">
+            <input type="text" name="usuario" placeholder="Usuario" >
             <br>
             <input type="password" name="contraseña" placeholder="Contraseña">
             <br>
             <p class="alert">Alerta</p>
             <br>
             <!--  <input routerLink="/panel" class="btn btn-primary" type="submit" value="INGRESAR ">-->
-            <button routerLink="/panel" class="btn btn-primary" type="submit" >INGRESAR</button>
+            <button  class="btn btn-primary" type="submit" >INGRESAR</button>
         </form>
         
     </section>
